feat:update medicine by specialty, medical_record